--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "autoprefixer": "^10.4.13"
+        "@tailwindcss/line-clamp": "^0.4.2",
+        "autoprefixer": "^10.4.13",
+        "sass": "^1.57.1"
     }
 }
