--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,7 @@ SENTRY_TRACES_SAMPLE_RATE=1.0
 
 LOGGER_TELEGRAM_BOT_TOKEN=""
 LOGGER_TELEGRAM_BOT_CHAT_ID=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_CALLBACK="${APP_URL}/auth/socialite/github/callback"
