--- a/.env.example
+++ b/.env.example
@@ -60,8 +60,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1.0
 
-LOGGER_TELEGRAM_BOT_TOKEN=""
-LOGGER_TELEGRAM_BOT_CHAT_ID=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_LOGGER_CHAT_ID=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
