--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
-        "laravel-lang/attributes": "^2.1",
-        "laravel-lang/lang": "^12.16",
-        "laravel-lang/publisher": "^14.6",
+        "laravel-lang/common": "^3.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
